--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
+* {background-color: green;}
 .App {
   text-align: center;
+
 }
 
 .App-logo {
@@ -7,11 +9,6 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color:green;
@@ -28,11 +25,14 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav {
+  display: flex;
+  flex-direction: row;
+}
+.smoothscroll {
+  margin: 5px;
+  list-style:none;
+}
+li {
+  list-style:none;
 }
